--- a/script.html
+++ b/script.html
@@ -16,6 +16,7 @@
       }, {
         headers: {
           'Authorization': `Bearer ${API_KEY}`,
+          'Content-Type': 'application/json'
         }
       }).then(res => {
         console.log(res.data.choices[0].text);
@@ -35,5 +36,12 @@
   <h1>Задайте вопрос OpenAI</h1>
   <input type="text" id="questionInput" placeholder="Введите ваш вопрос">
   <button onclick="askQuestion()">Задать вопрос</button>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const button = document.querySelector('button');
+      button.addEventListener('click', askQuestion);
+    });
+  </script>
 </body>
 </html>
