--- a/script.html
+++ b/script.html
@@ -1,46 +1,35 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>Задайте вопрос OpenAI</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-  <script>
-    const API_KEY = "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";
-
-    function askOpenAI(question) {
-      axios.post('https://api.openai.com/v1/engines/davinci/completions', {
-        prompt: question,
-        max_tokens: 50,
-        temperature: 0.9,
-        top_p: 0.9,
-        stream: false,
-      }, {
-        headers: {
-          'Authorization': `Bearer ${API_KEY}`,
-          'Content-Type': 'application/json'
-        }
-      }).then(res => {
-        console.log(res.data.choices[0].text);
-      }).catch(err => {
-        console.error(err);
-      });
-    }
-
-    function askQuestion() {
-      const questionInput = document.getElementById('questionInput');
-      const question = questionInput.value;
-      askOpenAI(question);
-    }
-  </script>
+  <title>DDOS Attack on GitHub Pages</title>
 </head>
 <body>
-  <h1>Задайте вопрос OpenAI</h1>
-  <input type="text" id="questionInput" placeholder="Введите ваш вопрос">
-  <button onclick="askQuestion()">Задать вопрос</button>
-
+  <h1>DDOS Attack on GitHub Pages</h1>
+  <form>
+    <label for="url">URL:</label>
+    <input type="text" id="url" name="url">
+    <br><br>
+    <label for="duration">Duration (seconds):</label>
+    <input type="text" id="duration" name="duration">
+    <br><br>
+    <label for="port">Port:</label>
+    <input type="text" id="port" name="port">
+    <br><br>
+    <input type="submit" value="Start DDOS" name="start">
+    <input type="submit" value="Stop DDOS" name="stop">
+  </form>
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const button = document.querySelector('button');
-      button.addEventListener('click', askQuestion);
+    document.querySelector('form').addEventListener('submit', (event) => {
+      event.preventDefault();
+      const url = document.querySelector('#url').value;
+      const duration = document.querySelector('#duration').value;
+      const port = document.querySelector('#port').value;
+      if (event.target.name === 'start') {
+        // Start the DDOS Attack
+        fetch(`/start-ddos?url=${url}&duration=${duration}&port=${port}`);
+      } else {
+        // Stop the DDOS Attack
+        fetch(`/stop-ddos?url=${url}&duration=${duration}&port=${port}`);
+      }
     });
   </script>
 </body>
